--- a/Day1/demo.html
+++ b/Day1/demo.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-<title> demo page </title>
+<title> rental page </title>
 <link rel="icon" href="rental.jpg" type="image/x-jpg"/ >
 </head>
 <body>
-<h1> Good morning </h1>
-<img src="gdmrng.jpg" alt="dinesh"  height="400" width="500">
+<h1> Greetings </h1>
+<img src="rental.jpg" alt="some issue"  height="400" width="500">
 <p> Example for Ordered list </p>
 <ol>
   <li> name </li>
@@ -23,6 +23,40 @@
   </ul>
 <p> example for links </p>
 <a href="https://github.com/DINESHYNOT">github account</a>
+<p></p>
+<p>
+  <a href="https://media.tenor.com/l5RHFsffpDEAAAAC/car-running.gif">
+    car vedio
+  </a>
+</p>
+<dl>
+<dt>car rental</dt>
+<dd>  The cheapest rates</dd>
+<dd> Luxury cars at less</dd>
+<dt>car list</dt>
+<dd> Maruti Grand Vitara</dd>
+<dd> Maruti Suzuki Alto</dd>
+<dd>Tata Tiago</dd>
+<dd> Mahindra Marazzo </dd>
+</dl>
+
+<ul>
+<li> <a href="#" > home</a></li>
+<li> <a href="#" > back </a> </li>
+<li> <a href = "#" > contact</a>  </li>
+</ul>
+<hr>
+<form>
+<input type="search" placeholder = "enter ur name" /> <br> <br>
+<input type="feedback" placeholder ="enter ur feedback" /> <br> <br>
+<input type = "phone number" placeholder= "enter ur phone number" /> <br> <br>
+<input type = "submit" value = "proceed" />
+</form>
+
+<p style = "color:blue"> continue</p>
+
+
+
 
 
 
